tests/baselines/reference/indexersInClassType.errors.txt
indexersInClassType.ts(2,5): error TS2413: 'number' index type 'Date' is not assignable to 'string' index type 'Object'.
indexersInClassType.ts(4,5): error TS2411: Property '1' of type 'Date' is not assignable to 'string' index type 'Object'.


==== indexersInClassType.ts (2 errors) ====
    class C {
        [x: number]: Date;
        ~~~~~~~~~~~~~~~~~~
!!! error TS2413: 'number' index type 'Date' is not assignable to 'string' index type 'Object'.
        [x: string]: Object;
        1: Date;
        ~
!!! error TS2411: Property '1' of type 'Date' is not assignable to 'string' index type 'Object'.
        'a': {}
    
        fn() {
            return this;
        }
    }
    
    var c = new C();
    var r = c.fn();
    var r2 = r[1];
    var r3 = r.a
    
    